# prompt-tester

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: client_example.py  compare_example.py  conversation_example.py
mcp_prompt_tester/: __init__.py  __main__.py  env.py  server.py  tools.py
mcp_prompt_tester/providers/: __init__.py  anthropic.py  base.py  openai.py
mcp_prompt_tester/tools/: __init__.py  compare_prompts.py  list_providers.py  test_comparison.py  test_multiturn_conversation.py
